# sift

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
analyzer/: pyproject.toml
analyzer/frida_scripts/: keychain_dump.js  ssl_pinning_bypass.js
analyzer/rules/: ios_bugbounty.yaml  ios_security.yaml
analyzer/semgrep_rules/: ios-swift-security.yaml
analyzer/src/ipa_analyzer/: __init__.py  cli.py
analyzer/src/ipa_analyzer/core/: context.py  extractor.py  scanner.py
analyzer/src/ipa_analyzer/detectors/: api_detector.py  ats.py  base.py  binary.py  crypto.py  custom.py  entitlements.py  privacy.py  secrets.py  semgrep.py  url_detector.py
analyzer/src/ipa_analyzer/importers/: har.py  mobsf.py
analyzer/src/ipa_analyzer/reporters/: base.py  console.py  html.py  json_reporter.py  pdf.py  sarif.py
analyzer/src/ipa_analyzer/reporters/templates/: report.html
analyzer/src/ipa_analyzer/utils/: entropy.py  exceptions.py  rules.py  scoring.py  strings.py
analyzer/tests/: conftest.py  test_api_detector.py  test_ats_detector.py  test_binary_detector.py  test_bugbounty_rules.py  test_cli.py  test_crypto_detector.py  test_custom_detector.py  test_entitlements_detector.py  test_entropy.py  test_extractor.py  test_html_reporter.py  test_importers.py  test_ios_security_rules.py  test_json_reporter.py  test_mobsf_custom_rules.py  test_pdf_reporter.py  test_privacy_detector.py  test_rules.py  test_sarif_reporter.py  test_scoring.py  test_secrets_detector.py  test_semgrep_detector.py  test_strings.py  test_url_detector.py  test_xcarchive_extractor.py
(+80 files in other folders)
